--- a/index.html
+++ b/index.html
@@ -174,18 +174,16 @@
     <!-- Contact Section -->
     <section class="contatti" id="contatti">
         <h2 class="heading">Contat<span>timi</span></h2>
-        <form>
+        <form action="https://formspree.io/f/xjkvpjze" method="POST">
             <div class="input-box">
-                <input type="text" id="nome" placeholder="Nome" required>
-                <input type="email" id="email" placeholder="Email" required>
+                <input type="text" name="nome" placeholder="Nome" required>
+                <input type="email" name="email" placeholder="Email" required>
             </div>
-            <textarea id="messaggio" cols="30" rows="10" placeholder="Inserire messaggio" required></textarea>
-            <!-- Bottone che apre l'email con il link mailto -->
-            <a href="mailto:marcluc1998@gmail.com?subject=Messaggio%20di%20contatto&body=Nome:%20%0AEmail:%20%0AMessaggio:%20" class="btn">
-                Invia email
-            </a>
+            <textarea name="messaggio" cols="30" rows="10" placeholder="Inserire messaggio" required></textarea>
+            <button type="submit" class="btn">Invia email</button>
         </form>
     </section>
+    
 
     
     <!-- Footer -->
@@ -194,17 +192,6 @@
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/script.js"></script>
-    <script>
-        function invioEmail() {
-            const nome = document.getElementById('nome').value;
-            const email = document.getElementById('email').value;
-            const messaggio = document.getElementById('messaggio').value;
-            const subject = 'Messaggio di contatto';
-            const body = `Nome: ${nome}\nEmail: ${email}\nMessaggio: ${messaggio}`;
-            const mailtoLink = `mailto:marcluc1998@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
-            window.location.href = mailtoLink;
-        }
-    </script>
 
 </body>
 </html>
