--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio di Marco Spinazzola, sviluppatore web e perito informatico. Esplora i miei progetti e la mia esperienza.">
     <title>Marco Spinazzola | Portfolio</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -26,7 +27,12 @@
     <!-- Hero Section -->
     <section class="hero" id="hero">
         <h1>Marco Spinazzola</h1>
-        <p>Customer Care | Junior  Developer </p>
+        <p class="">Customer Care | Junior  Developer </p>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/spina98/" target="_blank" class="social-icon" title="Seguimi su Instagram"><i class='bx bxl-instagram'></i></a>
+            <a href="https://github.com/Marchitos17?tab=repositories" target="_blank" class="social-icon"><i class='bx bxl-github' title="Visiona il mio profilo Github."></i></a>
+            <a href="https://www.linkedin.com/in/marco-spinazzola-4399a9153/" target="_blank" class="social-icon"><i class='bx bxl-linkedin' title="Seguimi su Linkedin"></i></a>
+        </div>
         <div class="scroll"><i class='bx bx-chevron-down'></i></div>
     </section>
 
@@ -149,7 +155,7 @@
                 <img src="immagine/portfolio1.jpeg" alt="">
                 <div class="portfolio-layer">
                     <h4>Work in progress</h4>
-                    In Corso</p>
+                    <p>In Corso</p>
                     <i class='bx bx-link-external' ></i>
                 </div>
             </div>
@@ -157,7 +163,7 @@
                 <img src="immagine/portfolio1.jpeg" alt="">
                 <div class="portfolio-layer">
                     <h4>Work in progress</h4>
-                    In Corso</p>
+                    <p>In Corso</p>
                     <i class='bx bx-link-external'></i>
                 </div>
             </div>
@@ -165,7 +171,7 @@
                 <img src="immagine/portfolio1.jpeg" alt="">
                 <div class="portfolio-layer">
                     <h4>Work in progress</h4>
-                    In Corso</p>
+                    <p>In Corso</p>
                     <i class='bx bx-link-external'></i>
                 </div>
             </div>
@@ -182,10 +188,12 @@
             <textarea name="messaggio" cols="30" rows="10" placeholder="Inserire messaggio" required></textarea>
             <button type="submit" class="btn">Invia email</button>
         </form>
+        
     </section>
     <!-- Footer -->
     <footer>
-        <p>© 2024 Marco Spinazzola. All rights reserved.</p>
+        <p>© 2024 Marco Spinazzola. All rights reserved.
+            <button id="scrollTopBtn" onclick="scrollToTop()">↑</button></p>
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/script.js"></script>
