--- a/index.html
+++ b/index.html
@@ -71,12 +71,21 @@
                     <div class="timeline-contenuto">
                         <h5>05/04/2023 – <span>ATTUALE</span> Barletta, Italia</h5>
                         <h3><span>IMPIEGATO BACK OFFICE CUSTOMER SERVICE presso Chogan SPA</span></h3>
-                        <p>• Concretizzare rapporti con i clienti ed a essere pronto a qualsiasi richiesta che i clienti richiedono; </p>
-                        <p>• Ampie capacità nello smontare e rimontare parti hardware di un computer; </p>
-                        <p>• Effettuare assistenza hardware e software di qualsiasi dispositivo elettronico; </p>
-                        <p>• Debug e modifica di software; </p>
-                        <p>• Capacita' nel gestire eventuali malfunzionamenti della rete; </p>
-                        <p>• Capacità di configurare reti domestiche e aziendali.</p>
+                        <p>• Buona padronanza dei programmi informatici, in modo da supportare l’archiviazione degli ordini e le banche date dei clienti; </p>
+                        <p>• Capacità di “problem solving”, agendo con lucidità anche in situazioni di forte stress;</p>
+                        <p>• Collaborazione con la Direzione logistica per la risoluzione di eventuali problematiche durante la spedizione;</p>
+                        <p>• Assistenza ai consulenti e/o clienti finali tramite sistema di ticketing; </p>
+                        <p>• Supporto ai consulenti e/o clienti finali nelle varie fasi dell’ordine; </p>
+                        <p>• Controllo dei documenti forniti dai consulenti/clienti;</p>
+                        <p>• Fornire informazioni dettagliate su prodotti e servizi, rispondere a domande e dubbi;</p>
+                        <p>• Gestione del processo post – vendita;</p>
+                        <p>• Risoluzione dei ticket/reclami da parte dei consulenti e/o clienti finali;</p>
+                        <p>• Svolgere attività di front-office e back-office;</p>
+                        <p>• Tenere uno storico dei problemi e delle segnalazioni gestite;</p>
+                        <p>• Gestione dei resi e dei rimborsi, garantendo una risoluzione tempestiva ed efficace delle problematiche legate a prodotti non conformi o richieste di rimborso;</p> 
+                        <p>• Coordinamento con i reparti interni per velocizzare le operazioni relative ai resi e ai rimborsi;</p> 
+                        <p>• Monitoraggio delle richieste di reso e rimborso, aggiornando i clienti sullo stato delle pratiche;</p> 
+                        <p>• Analisi e risoluzione di eventuali discrepanze legate a resi o accrediti.</p>
                     </div>
                 
             </div>
