--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <li>⚡ Framework backend come Laravel</li>
                     <li>⚡ Github</li>
                 </ul>
+                  
                 <a href="Cv Marco Spinazzola.pdf" class="btn" style="margin-top: 20px;" download>Scarica CV</a>
             </div>
             <div class="about-image">
@@ -201,8 +202,7 @@
     </section>
     <!-- Footer -->
     <footer>
-        <p>© 2024 Marco Spinazzola. All rights reserved.
-            <button id="scrollTopBtn" onclick="scrollToTop()">↑</button></p>
+        © 2024 Marco Spinazzola. All rights reserved.
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/script.js"></script>
